# poetry_monorepo

./: pyproject.toml
lib/a/: __init__.py  pyproject.toml
lib/b/: pyproject.toml
lib/c/: pyproject.toml
