[tool.poetry]
name = "lib"
description = ''
authors = ["Luca Medeiros <luca.medeiros@nuvi-labs.com>"]
version = "0.1.0"
packages = [
    { include = "lib" },
]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
rich = "^12.5.1"


c = {path = "lib/c"} # Util uses s3
a = {path = "lib/a", optional = true}
b = {path = "lib/b", optional = true}


[tool.poetry.extras]
a = ["a"]
b = ["b"]
c = ["c"]


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
