[tool.poetry]
name = "a"
description = ''
authors = ["Luca Medeiros <luca.medeiros@nuvi-labs.com>"]
version = "0.1.0"
packages = [
    { include = "*" },
]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
numpy = "^1.22.4"
b = { path = "../b" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
commitizen = "2.27.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
