[tool.poetry]
name = "b"
description = ''
authors = ["Luca Medeiros <luca.medeiros@nuvi-labs.com>"]
version = "0.1.0"
packages = [
    { include = "*" },
]

[tool.poetry.dependencies]
python = "^3.8, <3.11"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
