[tool.poetry]
name = "c"
description = ''
authors = ["Luca Medeiros <luca.medeiros@nuvi-labs.com>"]
version = "0.1.0"
readme = "README.md"
packages = [
    { include = "*" },
]

[tool.poetry.dependencies]
python = "^3.8, <3.11"
pandas = "^1.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
